# spark-ablate

./: .gitignore  README.md  pyproject.toml
configs/: custom_targets.yaml  gemma-3-1b-refusal.yaml  head_sweep.yaml  layer_sweep.yaml  smoke_test.yaml
data/: generate_prompts.py  harmful_sample.txt  harmless_sample.txt  smoke.txt
results/smoke/: results.jsonl  summary.json
src/sparkablate/: __init__.py  bake.py  capture.py  cli.py  config.py  directions.py  eval.py  hooks.py  model.py  report.py  runner.py
src/sparkablate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ablation.py  test_bake.py  test_directions.py  test_families.py  test_runner.py
