[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkablate"
version = "0.1.0"
description = "Component-ablation toolkit for open-weight LLMs, tuned for single-node DGX Spark workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]
datasets = ["datasets>=2.20"]
dev = ["pytest>=8.0"]

[project.scripts]
ablate = "sparkablate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
